# lehrfempp

lib/lf/: CMakeLists.txt
lib/lf/assemble/: assembler.h  dofhandler.cc  dofhandler.h
lib/lf/base/: lf_assert.h  ref_el.cc  (+1 more)
lib/lf/dgfe/: CMakeLists.txt  advection_reaction.h  advection_reaction_diffusion_rhs.h  auxiliary_operators.h  basisfunctionstext.py  bounding_box.cc  bounding_box.h  dgfe.h  dgfe_mesh_function.h  dgfe_providers.cc  dgfe_providers.h  dgfe_space.cc  dgfe_space.h  diffusion.h  discontinuity_penalization.cc  discontinuity_penalization.h  integration.cc  integration.h  legendre_dgfe.cc  legendre_dgfe.h  legendre_plot.py  mesh_function.h  mesh_function_dgfe.h  mesh_function_global.h  sub_tessellation.cc  sub_tessellation.h
lib/lf/dgfe/test/: CMakeLists.txt  advection_reaction_diffusion_rhs_tests.cc  advection_reaction_diffusion_tests.cc  advection_reaction_tests.cc  auxiliary_operators_tests.cc  bounding_box_tests.cc  dgfe_mesh_function_tests.cc  dgfe_providers_tests.cc  diffusion_tests.cc  discontinuity_penalization_tests.cc  integration_tests.cc  legendre_dgfe_tests.cc  mesh_function_dgfe_tests.cc  mesh_function_global_tests.cc  mikkel  sub_tessellation_tests.cc
lib/lf/dgfe/test/msh_files/: 100_cells_16_05_nohorzcat.vtk  unit_quare_voronoi_1000_cells.vtk  unit_quare_voronoi_2048_cells.vtk  unit_quare_voronoi_256_cells.vtk  unit_quare_voronoi_32_cells.vtk  unit_quare_voronoi_512_cells.vtk  unit_quare_voronoi_800_cells.vtk  unit_square_voronoi_1024_cells.vtk  unit_square_voronoi_10_cells.vtk  unit_square_voronoi_1200_cells.vtk  unit_square_voronoi_128_cells.vtk  unit_square_voronoi_1600_cells.vtk  unit_square_voronoi_16_cells.vtk  unit_square_voronoi_2000_cells.vtk  unit_square_voronoi_4000_cells.vtk  unit_square_voronoi_4096_cells.vtk  unit_square_voronoi_8_cells.vtk
lib/lf/mesh/polytopic2d/: CMakeLists.txt  mesh.cc  mesh.h  mesh_factory.cc  mesh_factory.h  polygon.cc  polygon.h  polytopic2d.h
lib/lf/mesh/polytopic2d/polymesher/: README.txt  mesh.m  vtk_writer.ipynb  vtk_writer.py
lib/lf/mesh/polytopic2d/polymesher/matlab_out/: unit_square_1000_elements.txt  unit_square_1000_elements_final.txt  unit_square_1000_nodes.txt  unit_square_1000_nodes_final.txt  unit_square_100_elements.txt  unit_square_100_nodes.txt  unit_square_1024_elements.txt  unit_square_1024_nodes.txt  unit_square_10_elements.txt  unit_square_10_nodes.txt  unit_square_1200_elements.txt  unit_square_1200_nodes.txt  unit_square_128_elements.txt  unit_square_128_nodes.txt  unit_square_1400_elements.txt  unit_square_1400_nodes.txt  unit_square_1600_elements.txt  unit_square_1600_nodes.txt  unit_square_16_elements.txt  unit_square_16_nodes.txt  unit_square_2000_elements.txt  unit_square_2000_nodes.txt  unit_square_200_elements.txt  unit_square_200_nodes.txt  unit_square_2048_elements.txt  unit_square_2048_nodes.txt  unit_square_20_elements.txt  unit_square_20_nodes.txt  unit_square_256_elements.txt  unit_square_256_nodes.txt  unit_square_3000_elements.txt  unit_square_3000_nodes.txt  unit_square_32_elements.txt  unit_square_32_nodes.txt  unit_square_4000_elements.txt  unit_square_4000_nodes.txt  unit_square_400_elements.txt  unit_square_400_nodes.txt  unit_square_4096_elements.txt  unit_square_4096_nodes.txt  (+12 more)
lib/lf/mesh/polytopic2d/polymesher/meshes/: Mesh.vtk
lib/lf/mesh/polytopic2d/polymesher/polymesher_src/: PolyMesher.m
lib/lf/mesh/polytopic2d/polymesher/resources/project/C25a4QOyNmkVJsCRD0DU_AMmUps/: 6QxloiDEg12iWMDd6sGpjurfxqYp.xml  Cbi_6ARua2jdeREpCYYIKO7jl1op.xml  TtUlUwGtWwrBMSidVMJ75kxbKcgp.xml  VGSd5Gb8i4IIsLCCMSjKhJg0oVUp.xml  bwKEp82DvbmWPyZ8wsWoTDaMjb8p.xml  eTUIOHncxhwTrowktofueIpzRwsp.xml  gD-AQBeMB-ejqczPxbOhJmszWs0p.xml  kFlzi0mB8jUtP_yOw1QhI3b8aiAp.xml  lVRR10OOqzgbgtwTTMFDUeZVSoYp.xml  vgSRBElLY3yb2_OBj9V1bRUM6T8p.xml  xpdcM4TcaKAZZt47AT1Q05TZbzQp.xml  xtEhWJshmng_1LWqEFsHQuhOAbop.xml
lib/lf/mesh/polytopic2d/polymesher/resources/project/EEtUlUb-dLAdf0KpMVivaUlztwA/: TL7oUqzvQRW18LJyzOtAAfc2fcYd.xml  TL7oUqzvQRW18LJyzOtAAfc2fcYp.xml  nWXhN_28RCwtW637AaqMsKs3pMkp.xml  uMXrJo3kh8RHx2zSH-CQ6TNmTPcd.xml  uMXrJo3kh8RHx2zSH-CQ6TNmTPcp.xml
lib/lf/mesh/polytopic2d/polymesher/resources/project/F9j5P60eR3WJIJdROM5NMrFvsYc/: oRshDCHP1iJpHKDFrwr5fiNkJCIp.xml  pWDe6fnWLlrBhJdJrc71A8vGJj4p.xml
lib/lf/mesh/polytopic2d/polymesher/resources/project/fAu12mRyMqOYrIbz9plBL-edUKI/: bFVqyzPy78cEtABxXY4bsOnJa4Ip.xml
lib/lf/mesh/polytopic2d/polymesher/resources/project/qaw0eS1zuuY1ar9TdPn1GMfrjbQ/: C25a4QOyNmkVJsCRD0DU_AMmUpsp.xml  EGV3R7S3wRwLw9RrMF7NotCyzC0p.xml  F9j5P60eR3WJIJdROM5NMrFvsYcp.xml  gp_Jir7MyBjCGrCTLPs88jLa2wIp.xml
lib/lf/mesh/polytopic2d/polymesher/resources/project/root/: GiiBklLgTxteCEmomM8RCvWT0nQd.xml
lib/lf/mesh/polytopic2d/test/: CMakeLists.txt  mesh_factory_tests.cc  mesh_factory_tests.h  polygon_test.cc  polygon_test.h
projects/: CMakeLists.txt
projects/dgfem/: CMakeLists.txt  calculate_h.cc  converge_plotter.py  dirichlet_1.cc  dirichlet_10.cc  dirichlet_11.cc  dirichlet_12.cc  dirichlet_13.cc  dirichlet_14.cc  dirichlet_15.cc  dirichlet_2.cc  dirichlet_3.cc  dirichlet_4.cc  dirichlet_5.cc  dirichlet_6.cc  dirichlet_7.cc  dirichlet_8.cc  dirichlet_9.cc  fe_experiments.cc  full.cc  full_bvp.cc  full_bvp_p_1.cc  full_bvp_p_2.cc  manifactured_solution.cc  meshes.h  meshes_main.cc  plot_convergence.py  polytopic_from_hybrid.cc  problem_by_hand.cc  quadratic_dirichlet.cc  run_convergence.cc  run_convergence.h  run_slurm.sh  run_test.sh  sandbox.cc  slurm_run.sh  submit_slurm.sh  submitter.sh
projects/dgfem/legendre_plots/: legendre_plot.py
projects/dgfem/mathematica/: advection_reaction_diffusion.nb  advection_reaction_diffusion_full.nb  by_hand.nb  first.nb  full.nb  full_final.nb  full_simple.nb  sandbox.nb
projects/dgfem/msh_files/: unit_square_polytopic_1000_cells.vtk  unit_square_voronoi_100_cells.vtk  unit_square_voronoi_1400_cells.vtk  unit_square_voronoi_200_cells.vtk  unit_square_voronoi_20_cells.vtk  unit_square_voronoi_3000_cells.vtk  unit_square_voronoi_400_cells.vtk  unit_square_voronoi_4_cells.vtk  unit_square_voronoi_64_cells.vtk
(+22 files in other folders)
